--- a/.gitignore
+++ b/.gitignore
@@ -132,6 +132,10 @@ Control.ca-bundle
 Control.system-ca-bundle
 GitHub.sublime-settings
 
+# Django folder 
+static/
+media/
+
 # Visual Studio Code #
 .vscode/*
 !.vscode/settings.json
